# rotated-box-is-back

./: .gitattributes  License.md  README.md  data_loader.py  debug_utils.py  intermediate_processing.py  metric.py  model_refine.py  roi_rotate.py  text_postprocessing.py  train_refine_estimator.py  utils.py  viz.py
dockerfile/: Dockerfile
final_checkpoint_ch4/: checkpoint  model.ckpt-121629.data-00000-of-00001  model.ckpt-121629.index
final_checkpoint_ch8/: checkpoint  model.ckpt-835309.data-00000-of-00001  model.ckpt-835309.index
net/: resnet.py  resnet_utils.py  resnet_v1.py  resnet_v1_scope.py
nms/: CMakeLists.txt  __init__.py  nms_kernel.cc  nms_kernel.cpp  nms_kernel.cu  nms_kernel_ops.cc  rbox_nms_kernel.cu  shell.sh
rpn_util/: generate_anchors.py  rpn_params.py  utils.py
